testsuite/tests/polykinds/T5716.stderr

T5716.hs:14:39: error: [GHC-64578]
    • Data constructor ‘DFInt’ cannot be used here
        (it comes from a data family instance)
    • In the first argument of ‘U1’, namely ‘DFInt’
      In the first argument of ‘I’, namely ‘(U1 DFInt)’
      In the type ‘I (U1 DFInt)’
